2005-01-23  Carl Worth  <cworth@cworth.org>

	* RELEASING: Add instructions for handling the new "-head" suffix
	of CAIRO_VERSION at release-time.

	* configure.in: Append "-head" to CAIRO_VERSION to indicate state
	between snapshots.

	* src/cairo_gstate.c: Add missing prototype for	_cairo_gstate_ensure_font.
	(_cairo_gstate_current_font): Add missing declaration so things
	compile again.

2005-01-21  Owen Taylor  <otaylor@redhat.com>

	* Call _cairo_gstate_ensure_font(). Don't reference
	the returned font.

2005-01-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_ft_font.c (_get_load_flags): Make dependence
	on FC_HINT_STYLE conditional. (reported by Abraham Egnor)

	* src/cairo_ft_font.c: Use FT_LOAD_MONOCHROME if 
	FT_LOAD_TARGET_MONO isn't defined for compatibility
	with older FreeType.

2005-01-16  Owen Taylor  <otaylor@redhat.com>

	Change cairo_font_t to refer to a font scaled to a particular
	output device resolution.

	* src/cairoint.h src/cairo_font.c src/cairo_ft_font.c
	src/cairo_xlib_surface.c src/cairo_pdf_surface.c src/cairo_gstate.c 
	src/cairo.c: Switch many internal methods from handling 
	cairo_unscaled_font_t and cairo_font_scale_t pairs to handling 
	cairo_font_t.

	* src/cairo-ft-private.h src/cairo_ft_fontc: Add some internal 
	interfaces for use by the FreeType backend.

	* src/cairo_gstate.c: Clear the gstate's current font when
	the transform or target surface changes.

	* src/cairo.h src/cairo_ft_font.c: Rename cairo_ft_font_pattern
	to cairo_ft_font_get_pattern().

	* src/cairo.h src/cairo_ft_font.c: Make cairo_ft_font_create() 
	and cairo_ft_font_create_for_ft_face() take a font scale;
	make the latter take load_flags for FT_Load_Glyph() as well.
	Change cairo_ft_font_face() to Xft-style cairo_ft_font_lock_face,
	cairo_ft_font_unlock_face.

	* src/cairo_font.c: Remove the name/slant/weight=>unscaled font 
	cache, it didn't work with the new cairo_font_t setup. If it turns
	out to be needed, it can be added back in some other form.
